# MetaImageIO

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.md  README.md  RELEASE.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
+metaimageio/: imformats.m  read.m  read_image.m  write.m  write_image.m
+metaimageio/+py/: py2mat.m  read.m  read_image.m  write.m  write_image.m
+pymetaio/: imformats.m  py2mat.m  read_image.m  write_image.m
+pymetaio/+py/: py2mat.m  read_image.m  write_image.m
.github/workflows/: main.yml  metaimageio.yml
conda/: meta.yaml
metaimageio/: __init__.py  imageio.py  read.py  reader.py  util.py  version.py  write.py  writer.py
pymetaio/: __init__.py  imageio.py  io.py  util.py  version.py
tests/: conftest.py  test_imageio.py  test_io.py  test_matlab.py
