[build-system]
requires = [
    "setuptools>=64",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaimageio"
version = "1.3.0"
description = "Support for reading and writing images in MetaIO file format."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Ali Uneri"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"]
dependencies = [
    "numpy>=1.26"]
requires-python = ">=3.8"

[project.optional-dependencies]
flake8 = [
    "flake8",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-mutable",
    "flake8-pyproject",
    "flake8-quotes",
    "flake8-use-fstring",
    "flake8-use-pathlib",
    "pep8-naming"]
imageio = [
    "imageio"]
pytest = [
    "pytest",
    "pytest-cov"]

[project.urls]
Homepage = "https://auneri.github.io/MetaImageIO"
Repository = "https://github.com/auneri/MetaImageIO"

[tool.setuptools.packages.find]
where = ["."]

[tool.flake8]
extend-ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "E231", "E501"]
import-order-style = "smarkets"

[tool.pycodestyle]
ignore = ["E231", "E501"]
# E231: missing whitespace after ',', ';', or ':'
# E501: line too long (> 79 characters)

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
# D100: missing docstring in public module
# D101: missing docstring in public class
# D102: missing docstring in public method
# D103: missing docstring in public function
# D104: missing docstring in public package
# D105: missing docstring in magic method
# D106: missing docstring in public nested class
# D107: missing docstring in __init__
