[build-system]
requires = [
    "setuptools>=64",
    "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaimageio"
version = "1.3.2"
description = "Support for reading and writing images in MetaIO file format."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Ali Uneri"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"]
dependencies = [
    "numpy>=1.26"]
requires-python = ">=3.8"

[project.optional-dependencies]
imageio = [
    "imageio>=2.28"]
pytest = [
    "pytest",
    "pytest-cov",
    "pytest-ruff"]

[project.urls]
Homepage = "https://auneri.github.io/MetaImageIO"
Repository = "https://github.com/auneri/MetaImageIO"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov=metaimageio --cov-report=term --ruff"

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 200

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "COM",  # flake8-commas
    "E",  # pycodestyle errors
    "ERA",  # eradicate
    "EXE",  # flake8-executable
    "F",  # Pyflakes
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    "FURB",  # refurb
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "N",  # pep8-naming
    "NPY",  # NumPy-specific rules
    "PD",  # pandas-vet
    "PERF",  # Perflint
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "S",  # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"
