# E231: missing whitespace after ',', ';', or ':'
# E501: line too long (> 79 characters)
# D100: missing docstring in public module
# D101: missing docstring in public class
# D102: missing docstring in public method
# D103: missing docstring in public function
# D104: missing docstring in public package
# D105: missing docstring in magic method
# D106: missing docstring in public nested class
# D107: missing docstring in __init__

[metadata]
version = attr: metaimageio.version.__version__

[flake8]
extend-ignore = E231,E501,D100,D101,D102,D103,D104,D105,D106,D107
import-order-style = smarkets

[pycodestyle]
ignore = E231,E501

[pydocstyle]
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

[tool:pytest]
addopts = -p no:cacheprovider
